syntax = "proto3";
option go_package = ".;users";
package users.v1;

service UserService {
    rpc Get(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest {
    string id = 1; // The users UUID to lookup
}

message GetUserResponse {
    User user = 1;
}

message User {
    string id = 1; // The users UUID
}